tests/type_errors/higher_order_wrong_fn_type.nos
# expect_error: type mismatch
# Test: passing function with wrong signature to higher-order function

applyTwice(f: Int -> Int, x: Int) = f(f(x))

stringFn(s: String) = s ++ "!"

main() = applyTwice(stringFn, 42)  # stringFn is String -> String, not Int -> Int
